# benchmark-py-api

./: .bash_history  .gitignore  README.md  Vagrantfile  create_dist.sh  gunicorn.conf.py  locust.conf  playbook.yml  pyproject.toml  setup.sh
benchmark/: pyproject.toml  test.py
confs/: fastapi-gunicorn.conf  flask-gunicorn.conf
etc/systemd/system/: fastapi.gunicorn.service  flask.gunicorn.service
fastapi-example/: client.py  pyproject.toml  requirements.txt
fastapi-example/fastapi_example/: router.py  schema.py
fastapi-gunicorn/: client.py  pyproject.toml
fastapi-gunicorn/fastapi_gunicorn/: dependencies.py  router.py  schema.py
flask-example/: client.py  pyproject.toml
flask-example/flask_example/: blueprint.py  client.py  schema.py
flask-gunicorn/: pyproject.toml
flask-mod-wsgi/: pyproject.toml
services/: flask.gunicorn.socket
veterinary-clinic/: pyproject.toml
veterinary-clinic/veterinary_clinic/: bootstrap.py  db.py  models.py  service.py
