[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["AgRenaud <renaud.aguirrechambilla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
locust = "^2.12.1"
Faker = "^14.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
