[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["AgRenaud <renaud.aguirrechambilla@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_example"}]

[tool.poetry.dependencies]
python = "3.10.4"
uuid = "^1.30"
fastapi = "^0.85.0"
veterinary-clinic = { path = "../veterinary-clinic", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
