[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = ""
authors = ["AgRenaud <renaud.aguirrechambilla@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_example"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.41"
veterinary-clinic = { path = "../veterinary-clinic", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
