[tool.poetry]
name = "veterinary-clinic"
version = "0.1.0"
description = ""
authors = ["AgRenaud <renaud.aguirrechambilla@gmail.com>"]
readme = "README.md"
packages = [{include = "veterinary_clinic"}]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
